--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.json-20190722.jar=json-20190722.jar
+file.reference.mysql-connector-java-5.1.48.jar=mysql-connector-java-5.1.48.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20190722.jar}
+    ${file.reference.json-20190722.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
